--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "16.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "resend": "^6.2.2"
+    "resend": "^6.2.2",
+    "swiper": "^12.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
